Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTICSDB.H

typedef void VOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned char * LPBYTE;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long MSGADDR;
typedef unsigned long BASEADDR;
typedef unsigned long LISTADDR;
typedef int BOOL;
typedef void * HCORE;
typedef int HCORE;
typedef int ERRVAL;
typedef int SCHNDX;
BTICSDBAPI ERRVAL __stdcall BTICSDB_ChConfigExx(ULONG configval,USHORT count,USHORT bitrateflag,USHORT bytesperblock,USHORT framespersecond,USHORT blocksperframe,USHORT interbytegap,INT channum,HCORE handleval);
BTICSDBAPI ULONG __stdcall BTICSDB_CmdAddr(SCHNDX index,INT channum,HCORE handleval);
BTICSDBAPI ULONG __stdcall BTICSDB_CmdAlloc(INT count,HCORE handleval);
BTICSDBAPI ULONG __stdcall BTICSDB_CmdAllocEx(ULONG configval,INT count,HCORE handleval);
BTICSDBAPI ULONG __stdcall BTICSDB_CmdBaseRd(INT channum,HCORE handleval);
BTICSDBAPI VOID __stdcall BTICSDB_CmdBaseWr(ULONG addrval,INT channum,HCORE handleval);
BTICSDBAPI ERRVAL __stdcall BTICSDB_CmdClear(INT channum,HCORE handleval);
BTICSDBAPI USHORT __stdcall BTICSDB_CmdCountRd(INT channum,HCORE handleval);
BTICSDBAPI VOID __stdcall BTICSDB_CmdCountWr(USHORT countval,INT channum,HCORE handleval);
BTICSDBAPI USHORT __stdcall BTICSDB_CmdCtrlRd(SCHNDX index,INT channum,HCORE handleval);
BTICSDBAPI VOID __stdcall BTICSDB_CmdCtrlWr(USHORT ctrlval,SCHNDX index,INT channum,HCORE handleval);
BTICSDBAPI USHORT __stdcall BTICSDB_CmdCurrRd(INT channum,HCORE handleval);
BTICSDBAPI VOID __stdcall BTICSDB_CmdCurrWr(USHORT addrval,INT channum,HCORE handleval);
BTICSDBAPI VOID __stdcall BTICSDB_CmdInit(USHORT opcode,LPUSHORT block);
BTICSDBAPI SCHNDX __stdcall BTICSDB_CmdInsert(LPUSHORT block,INT channum,HCORE handleval);
BTICSDBAPI USHORT __stdcall BTICSDB_CmdMaxLoopRd(INT channum,HCORE handleval);
BTICSDBAPI VOID __stdcall BTICSDB_CmdMaxLoopWr(USHORT countval,INT channum,HCORE handleval);
BTICSDBAPI ERRVAL __stdcall BTICSDB_CmdRd(LPUSHORT block,ULONG addrval,HCORE handleval);
BTICSDBAPI VOID __stdcall BTICSDB_CmdRestart(INT channum,HCORE handleval);
BTICSDBAPI ERRVAL __stdcall BTICSDB_CmdShotWr(BOOL value,SCHNDX index,INT channum,HCORE handleval);
BTICSDBAPI ERRVAL __stdcall BTICSDB_CmdSkipWr(BOOL value,SCHNDX index,INT channum,HCORE handleval);
BTICSDBAPI VOID __stdcall BTICSDB_CmdStackClr(INT channum,HCORE handleval);
BTICSDBAPI USHORT __stdcall BTICSDB_CmdStartRd(INT channum,HCORE handleval);
BTICSDBAPI VOID __stdcall BTICSDB_CmdStartWr(USHORT addrval,INT channum,HCORE handleval);
BTICSDBAPI ERRVAL __stdcall BTICSDB_CmdStepWr(BOOL value,SCHNDX index,INT channum,HCORE handleval);
BTICSDBAPI INT __stdcall BTICSDB_CmdTotalRd(INT channum,HCORE handleval);
BTICSDBAPI VOID __stdcall BTICSDB_CmdTotalWr(INT countval,INT channum,HCORE handleval);
BTICSDBAPI ERRVAL __stdcall BTICSDB_CmdWr(LPUSHORT block,ULONG addrval,HCORE handleval);
BTICSDBAPI INT __stdcall BTICSDB_DllUsageCount(VOID);
BTICSDBAPI ULONG __stdcall BTICSDB_FilterAddr(INT addrval,INT sival,INT channum,HCORE handleval);
BTICSDBAPI BASEADDR __stdcall BTICSDB_FilterCreate(HCORE handleval);
BTICSDBAPI ERRVAL __stdcall BTICSDB_FilterFill(MSGADDR msgaddr,BASEADDR baseaddr,HCORE handleval);
BTICSDBAPI VOID __stdcall BTICSDB_GetChanCount(LPINT rcvcount,LPINT xmtcount,HCORE handleval);
BTICSDBAPI BOOL __stdcall BTICSDB_IsChan(INT channum,HCORE handleval);
BTICSDBAPI BOOL __stdcall BTICSDB_IsRcvChan(INT channum,HCORE handleval);
BTICSDBAPI BOOL __stdcall BTICSDB_IsXmtChan(INT channum,HCORE handleval);
BTICSDBAPI ULONG __stdcall BTICSDB_ListAddr(INT index,LISTADDR listaddr,HCORE handleval);
BTICSDBAPI ULONG __stdcall BTICSDB_ListAddrEx(INT index,LISTADDR listaddr,LPUSHORT header,HCORE handleval);
BTICSDBAPI ERRVAL __stdcall BTICSDB_ListAdvance(LISTADDR listaddr,HCORE handleval);
BTICSDBAPI ERRVAL __stdcall BTICSDB_ListClear(LISTADDR listaddr,HCORE handleval);
BTICSDBAPI LISTADDR __stdcall BTICSDB_ListConfig(ULONG configval,INT count,HCORE handleval);
BTICSDBAPI LISTADDR __stdcall BTICSDB_ListConfigEx(ULONG configval,INT count,HCORE handleval);
BTICSDBAPI INT __stdcall BTICSDB_ListDataRdEx(LPBYTE buf,INT count,INT index,LISTADDR listaddr,HCORE handleval);
BTICSDBAPI INT __stdcall BTICSDB_ListDataWrEx(LPBYTE buf,INT count,INT index,LISTADDR listaddr,HCORE handleval);
BTICSDBAPI ERRVAL __stdcall BTICSDB_ListInit(LISTADDR listaddr,MSGADDR msgaddr,HCORE handleval);
BTICSDBAPI ULONG __stdcall BTICSDB_ListNextRd(ULONG listaddr,LPUSHORT header,HCORE handleval);
BTICSDBAPI ULONG __stdcall BTICSDB_ListNextWr(ULONG listaddr,LPUSHORT header,HCORE handleval);