Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTICSDBNET.CS

            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_ChConfigExx@36", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ChConfigExx(UInt32 configval, UInt16 count, UInt16 bitrateflag, UInt16 bytesperblock, UInt16 framespersecond, UInt16 blocksperframe, UInt16 interbytegap, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_CmdAddr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_CmdAddr(Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_CmdAlloc@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_CmdAlloc(Int32 count, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_CmdAllocEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_CmdAllocEx(UInt32 configval, Int32 count, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_CmdBaseRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_CmdBaseRd(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_CmdBaseWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_CmdBaseWr(UInt32 addrval, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_CmdClear@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_CmdClear(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_CmdCountRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICSDB_CmdCountRd(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_CmdCountWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_CmdCountWr(UInt16 countval, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_CmdCtrlRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICSDB_CmdCtrlRd(Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_CmdCtrlWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_CmdCtrlWr(UInt16 ctrlval, Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_CmdCurrRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICSDB_CmdCurrRd(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_CmdCurrWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_CmdCurrWr(UInt16 addrval, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_CmdInit@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_CmdInit(UInt16 opcode, UInt16[] block);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_CmdInsert@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_CmdInsert(UInt16[] block, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_CmdMaxLoopRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICSDB_CmdMaxLoopRd(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_CmdMaxLoopWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_CmdMaxLoopWr(UInt16 countval, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_CmdRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_CmdRd(UInt16[] block, UInt32 addrval, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_CmdRestart@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_CmdRestart(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_CmdShotWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_CmdShotWr(Int32 value, Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_CmdSkipWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_CmdSkipWr(Int32 value, Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_CmdStackClr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_CmdStackClr(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_CmdStartRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICSDB_CmdStartRd(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_CmdStartWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_CmdStartWr(UInt16 addrval, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_CmdStepWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_CmdStepWr(Int32 value, Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_CmdTotalRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_CmdTotalRd(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_CmdTotalWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_CmdTotalWr(Int32 countval, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_CmdWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_CmdWr(UInt16[] block, UInt32 addrval, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_DllUsageCount@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_DllUsageCount();
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_FilterAddr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_FilterAddr(Int32 addrval, Int32 sival, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_FilterCreate@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_FilterCreate(IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_FilterFill@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_FilterFill(UInt32 msgaddr, UInt32 basevaladdr, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_GetChanCount@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_GetChanCount(ref Int32 rcvcount, ref Int32 xmtcount, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_IsChan@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_IsChan(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_IsRcvChan@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_IsRcvChan(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_IsXmtChan@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_IsXmtChan(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_ListAddr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_ListAddr(Int32 index, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_ListAddrEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_ListAddrEx(Int32 index, UInt32 listaddr, UInt16[] header, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_ListAdvance@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ListAdvance(UInt32 listaddr, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_ListClear@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ListClear(UInt32 listaddr, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_ListConfig@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_ListConfig(UInt32 configval, Int32 count, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_ListConfigEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_ListConfigEx(UInt32 configval, Int32 count, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_ListDataRdEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ListDataRdEx(byte[] buf, Int32 count, Int32 index, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_ListDataWrEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ListDataWrEx(byte[] buf, Int32 count, Int32 index, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_ListInit@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ListInit(UInt32 listaddr, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_ListNextRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_ListNextRd(UInt32 listaddr, UInt16[] header, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_ListNextWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_ListNextWr(UInt32 listaddr, UInt16[] header, IntPtr handleval);
